--- a/frontend/src/pages/styles/CreateAccount.css
+++ b/frontend/src/pages/styles/CreateAccount.css
@@ -55,6 +55,8 @@
 /* Buttons */
 .account-button {
   width: 100%;
+  margin: 0 auto;
+
   padding: 0.75rem;
   background-color: #4f63f7;
   color: white;
