--- a/frontend/src/pages/styles/Login.css
+++ b/frontend/src/pages/styles/Login.css
@@ -55,6 +55,8 @@
 /* Button */
 .login-button {
   width: 100%;
+  margin: 0 auto;
+  
   padding: 0.75rem;
   background-color: #4f63f7;
   color: white;
